--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         * {
             margin: 0;
             padding: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            box-sizing: border-box;
         }
 
         .chat {
@@ -29,6 +31,7 @@
 
         .chat__messages {
             border: 1px solid lightgray;
+            padding: 0.5rem;
 
             height: 20rem;
             width: 100%;
@@ -36,6 +39,10 @@
             display: flex;
             flex-direction: column;
             word-wrap: break-word;
+        }
+
+        .chat__messages__id {
+            font-weight: bolder;
         }
     </style>
 </head>
@@ -48,7 +55,8 @@
 
         </div>
         <div>
-            <input class="chat__input" id="chat__input" type="text">
+            <input class="chat__input" id="chat__input__name" type="text" placeholder="name">
+            <input class="chat__input" id="chat__input__message" type="text" placeholder="message">
             <input id="chat__submit" type="submit" value="send">
         </div>
     </div>
@@ -56,43 +64,53 @@
     <script>
         const socket = io();
         let messages = document.querySelector('#chat__messages')
-        let input = document.querySelector('#chat__input')
+        let inputMessage = document.querySelector('#chat__input__message')
+        let inputName = document.querySelector('#chat__input__name')
         let submit = document.querySelector('#chat__submit')
 
+        //PRINT MSG TO HTML
+        const addMessage = (msg) => {
+            messages.innerHTML += `
+            <span>
+                <span class="chat__messages__id">${msg.id}</span>:
+                <span class="chat__messages_content"> ${msg.content}</span>
+            </span>`
+        }
+
+        //SUBMIT MESSAGE TO SERVER
+        const handleSubmit = () => {
+            const data = { id: inputName.value, content: inputMessage.value.trim() }
+            let xhr = new XMLHttpRequest
+            xhr.open('POST', 'http://localhost:3000', true)
+            xhr.setRequestHeader('Content-type', 'application/json');
+            xhr.send(JSON.stringify(data))
+            console.log(JSON.stringify(data))
+            socket.emit('message', data)
+            inputMessage.value = ''
+        }
+
+        //ONLOAD, GET MESSAGES
         let xhr = new XMLHttpRequest
         xhr.open('GET', 'http://localhost:3000/messages', true)
         xhr.setRequestHeader('Content-type', 'application/json');
         xhr.onload = () => {
             console.log(JSON.parse(xhr.response))
             JSON.parse(xhr.response).messages.forEach((msg) => {
-
-                messages.innerHTML += `<span>${msg}</span>`
+                addMessage(msg)
             })
         }
         xhr.send()
 
-
-        const handleSubmit = () => {
-            const data = { message: input.value }
-            let xhr = new XMLHttpRequest
-            xhr.open('POST', 'http://localhost:3000', true)
-            xhr.setRequestHeader('Content-type', 'application/json');
-            xhr.send(JSON.stringify(data))
-            console.log(JSON.stringify(data))
-            socket.emit('message', data.message)
-            input.value = ''
-        }
-
+        //WAIT FOR NEW MESSAGES
         socket.on('message', (data) => {
-
-            messages.innerHTML += `<span>${data}</span>`
+            addMessage(data)
         })
 
+        //SEND MESSAGE
         submit.addEventListener('click', (e) => {
             e.preventDefault()
             handleSubmit()
         })
-
         document.addEventListener('keyup', (e) => {
             e.preventDefault()
             if (e.code == 'Enter') {
